# kosong

./: .gitignore  CHANGELOG.md  Makefile  README.md  index.html  kosong.html  main.py  pyproject.toml  pyrightconfig.json  search.js
.github/workflows/: ci.yml  release.yml
kosong/: chat_provider.html  contrib.html  message.html  tooling.html  utils.html
kosong/chat_provider/: chaos.html  echo.html  kimi.html  mock.html  openai_common.html
kosong/contrib/: chat_provider.html  context.html
kosong/contrib/chat_provider/: anthropic.html  common.html  google_genai.html  openai_legacy.html  openai_responses.html
kosong/contrib/context/: linear.html
kosong/tooling/: empty.html  error.html  mcp.html  simple.html
kosong/utils/: aio.html  jsonschema.html  typing.html
playground/: README.md  next.config.ts  package.json  pnpm-lock.yaml  requirements.txt  vercel.json
playground/api/: convert.py
playground/scripts/: dev-api.py
playground/src/app/: layout.tsx
src/kosong/: __init__.py  __main__.py  _generate.py  message.py
tests/: snapshot_common.py  test_anthropic.py  test_anthropic_snapshot.py  test_chat_provider.py  test_context.py  test_gemini.py  test_generate.py  test_google_genai.py  test_google_genai_snapshot.py  test_kimi_snapshot.py  test_message.py  test_openai_legacy.py  test_openai_legacy_snapshot.py  test_openai_responses_snapshot.py  test_step.py  test_tool_call.py  test_tool_result.py  test_tooling.py
tests/api_snapshot_tests/: common.py  test_anthropic.py  test_google_genai.py  test_kimi.py  test_openai_legacy.py  test_openai_responses.py
(+31 files in other folders)
