[project]
name = "kosong"
version = "0.7.0"
description = "The building blocks of AI agent."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jsonschema>=4.25.1",
    "openai>=1.107.2",
    "pydantic>=2.11.9",
]

[dependency-groups]
dev = ["pytest>=8.4.2", "ruff>=0.12.12"]

[build-system]
requires = ["uv_build>=0.8.5,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = ["kosong"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # Pyflakes
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "I",   # isort
]
